--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <html><head><title>Yeah!!It Works</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <style>
+body
+{
+   background:cornsilk;
+}
 h1
 { 
    color: black;
 text-align: center;
 padding-top: 120px;
+    font-size: 100px;
+font-family: "Noto Sans", sans-serif;
+
 } 
 #rc1
 {
-   background: grey;
-   border-radius: 40px;
+   background: #999999;
+    border-radius: 40px;
+    width: 30px;
+    color: cornsilk;
 }
 </style>
 
